--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,27 +37,8 @@
   <body>
 
     <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <%= link_to 'MP', root_path, class: 'brand' %>
-          <div class="container nav-collapse">
-            <ul class="nav">
-              <% if user_signed_in? %>
-              <li>Signed in as <%= current_user.email %></li>
-              <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete  %></li>
-              <% else %>
-              <li><%= link_to "Sign UP", new_user_registration_path  %></li>
-              <li><%= link_to "Sign In", new_user_session_path  %></li>
-              <% end %>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+      
+      <%= render 'layouts/header' %>
     </div>
 
     <div class="container">
@@ -78,6 +59,18 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
-
+    
+    <script>
+      $(document).ready(function()
+      {
+        //Handles menu drop down
+        $('.dropdown-menu').find('form').click(function (e) {
+              e.stopPropagation();
+              });
+        });
+    </script>
   </body>
 </html>
+
+
+
